# Misc

./: .gitignore  README.md
Arduino/: Sliding tripod.ino
Artemis Mockup/: Animations.cs
Bash/: test.sh
C/: a1_date  a1_date.c  lab2.1  lab2.1.c  modified_pun
C Assignments/: Assign2.txt  a2_4integers.c  addfrac.c  exprEval  fuck  fuck.c  isbn.c  lab2.2  lab2.2.c  lab7.c  pinCode  pinCode.c  primeFactor  primeFactor.c  swap
C++/: 3n+1.cpp  Bananas.cpp  CCCJ1.cpp  CCCJ3.cpp  CMakeCache.txt  HelloWorld.cpp  Makefile  VisionTest.cpp  Which alien.cpp  a plus b 2  a plus b 2.cpp  bouncing ball.cpp  bronze 4.cpp  bronze 5.cpp  car test  car.cpp  car.h  careful_reply  carful reply  carful reply.cpp  cmake_install.cmake  dynamicFib  dynamicFib.cpp  fib.cpp  functions  functions.cpp  hard question.cpp  how to compile.txt  kansas  kansas.cpp  max sum  max sum.cpp  missing link.cpp  one linner.cpp  piDay.cpp  primes.cpp  recursiveFib  recursiveFib.cpp  shit  shit.c  (+6 more)
C++/car/: CMakeCache.txt  CMakeLists.txt  Carm  Makefile  Run.py  cmake_install.cmake
C++/car/source/: car.cpp  car.h  test  test.cpp
C++Lessons/: Arrays-done  Arrays-done.cpp  Fucntions-done.cpp  Functions-done  Functions-done.cpp  Functions_with_arrays-done  Functions_with_arrays-done.cpp  HelloWorld-done  HelloWorld-done.cpp  IO-done  IO-done.cpp  If-done  If-done.cpp  Loop-done  Loop-done.cpp  Loops-done.cpp  String-done  String-done.cpp  Switch-done  Switch-done.cpp  Variables-done  Variables-done.cpp
CS212/: Shit.java
CS256/: lab1.sh
CS266/: Ass4.asm  Ass5-Q2.asm
PyTorch-test/: CMakeLists.txt
(+1287 files in other folders)
